# custom_workspaces

./: README.md  pyproject.toml  requirements.txt  setup.py
custom_workspaces/: hooks.py  install.py  modules.txt
custom_workspaces/public/css/: workspace.css
custom_workspaces/workspace/manager_workspace/: manager_workspace.json
custom_workspaces/workspace/operations_workspace/: operations_workspace.json
custom_workspaces/workspace/sales_workspace/: sales_workspace.json
