[project]
name = "custom_workspaces"
authors = [
    { name = "Custom App Author", email = "author@example.com"}
]
description = "A custom Frappe app to auto-generate workspaces"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # depending on version
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
